fix text size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ button#prev {
 .testimonial-container p {
     color: #414142;
     text-align: center;
-    font-size: 16px;
+    font-size: 12px;
     line-height: 20px;
     letter-spacing: 0.8px;
     }
@@ -208,6 +208,7 @@ button:hover {
         text-align: center;
         margin-top: 0px;
         }
+
     }
 
   
